--- a/exif-remover/index.html
+++ b/exif-remover/index.html
@@ -5,8 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>EXIF &amp; PDF Metadata Remover</title>
 
-  <!-- Font Awesome -->
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <!-- Font Awesome v5 (no Kit) -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+  />
+
   <!-- piexifjs for JPEG EXIF removal -->
   <script src="https://unpkg.com/piexifjs"></script>
   <!-- PDF-Lib for PDF metadata removal -->
@@ -15,15 +19,8 @@
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body, html { height: 100%; font-family: Arial, sans-serif; background: #f5f5f5; }
-    .container {
-      display: flex;
-      height: 100%;
-    }
-    .pane {
-      flex: 1;
-      padding: 20px;
-      overflow: auto;
-    }
+    .container { display: flex; height: 100%; }
+    .pane { flex: 1; padding: 20px; overflow: auto; position: relative; }
     .left {
       background: #fff;
       border-right: 1px solid #ddd;
@@ -43,21 +40,15 @@
       justify-content: center;
       color: #888;
       transition: border-color 0.3s, background 0.3s;
+      text-align: center;
     }
     .drop-zone.dragover {
       border-color: #666;
       background: #fafafa;
     }
-    .drop-zone i {
-      font-size: 48px;
-      margin-bottom: 10px;
-    }
-    .drop-zone p {
-      text-align: center;
-    }
-    .file-input {
-      margin-top: 15px;
-    }
+    .drop-zone i { font-size: 48px; margin-bottom: 10px; }
+    .file-input { margin-top: 15px; }
+    .info { margin-top: 15px; color: #555; text-align: center; }
     .btn {
       display: inline-block;
       padding: 10px 20px;
@@ -68,6 +59,7 @@
       border-radius: 8px;
       cursor: pointer;
       text-decoration: none;
+      font-size: 16px;
     }
     .btn:hover { background: #0056b3; }
     .right {
@@ -85,11 +77,6 @@
       background: #fff;
       padding: 10px;
     }
-    .info {
-      margin-top: 15px;
-      text-align: center;
-      color: #555;
-    }
     .header {
       position: absolute;
       top: 10px; left: 50%;
@@ -100,24 +87,21 @@
       border-radius: 20px;
       font-size: 14px;
     }
-    .star-link {
+    .star-btn {
       position: absolute;
       bottom: 20px;
-      font-size: 16px;
-      text-decoration: none;
-      color: #333;
-      display: flex;
-      align-items: center;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #333;
     }
-    .star-link i {
-      margin-right: 8px;
-      color: #f1c40f;
-    }
+    .star-btn i { margin-right: 8px; color: #f1c40f; }
   </style>
 </head>
 <body>
   <div class="header">🚀 0 Lag Processing</div>
+
   <div class="container">
+    <!-- LEFT PANE: Upload -->
     <div class="pane left">
       <div class="drop-zone" id="drop-zone">
         <div>
@@ -125,8 +109,24 @@
           <p>Drag &amp; Drop<br/>or Click to Upload</p>
         </div>
       </div>
-      <input type="file" accept=".jpg,.jpeg,.png,.pdf" id="file-input" class="file-input" />
+      <input
+        type="file"
+        accept=".jpg,.jpeg,.png,.pdf"
+        id="file-input"
+        class="file-input"
+      />
+      <p class="info">Allowed file types: JPG, JPEG, PNG, PDF</p>
+
+      <a
+        href="https://github.com/shravankumaruk/exif-jpg-pdf-remover"
+        target="_blank"
+        class="btn star-btn"
+      >
+        <i class="fab fa-github"></i> Star on GitHub
+      </a>
     </div>
+
+    <!-- RIGHT PANE: Output -->
     <div class="pane right">
       <div id="output-area">
         <p class="info">Your cleaned file will appear here.</p>
@@ -134,16 +134,12 @@
     </div>
   </div>
 
-  <a href="https://github.com/shravankumaruk/exif-jpg-pdf-remover" target="_blank" class="star-link">
-    <i class="fas fa-star"></i> Star on GitHub
-  </a>
-
   <script>
     const dropZone = document.getElementById('drop-zone');
     const fileInput = document.getElementById('file-input');
     const output = document.getElementById('output-area');
 
-    // Highlight on drag over
+    // Drag & drop styling
     ['dragenter','dragover'].forEach(evt =>
       dropZone.addEventListener(evt, e => {
         e.preventDefault();
@@ -180,12 +176,9 @@
         const arrayBuffer = await file.arrayBuffer();
         const pdfDoc = await PDFLib.PDFDocument.load(arrayBuffer);
         // remove all metadata
-        pdfDoc.setTitle('');
-        pdfDoc.setAuthor('');
-        pdfDoc.setSubject('');
-        pdfDoc.setKeywords([]);
-        pdfDoc.setProducer('');
-        pdfDoc.setCreator('');
+        pdfDoc.setTitle(''); pdfDoc.setAuthor('');
+        pdfDoc.setSubject(''); pdfDoc.setKeywords([]);
+        pdfDoc.setProducer(''); pdfDoc.setCreator('');
         const pdfBytes = await pdfDoc.save();
         const blob = new Blob([pdfBytes], { type: 'application/pdf' });
         const url = URL.createObjectURL(blob);
@@ -213,7 +206,7 @@
         wrap.appendChild(iframe);
       }
 
-      // Download button
+      // Download button (below preview)
       const link = document.createElement('a');
       link.href = url;
       link.download = mime === 'application/pdf' ? 'cleaned.pdf' : 'cleaned.jpg';
